tests/baselines/reference/parserComputedPropertyName31.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts(3,5): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts(4,5): error TS1166: Computed property names are not allowed in class property declarations.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts (2 errors) ====
    class C {
        // yes ASI
        [e]: number
        ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
        [e2]: number
        ~~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
    }